--- a/css/app.css
+++ b/css/app.css
@@ -51,10 +51,14 @@ h2 {
     text-shadow: 0 0 5px #01579b;
 }
 
-#belize {
+#Tunisia {
     background-color: #4dd0e1;
 }
 
-#barcelona {
+#Algeria {
     background-color: #800000;
+}
+
+#Morroco {
+    background-color: #802211;
 }
